# jano

./: .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: backend.yml
app/: App.tsx  README.md  app.json  eas.json  package-lock.json  package.json
app/navigation/: MainNavigator.tsx
app/screens/: AddJournalScreen.tsx  HomeScreen.tsx  JournalDetailScreen.tsx  LoginScreen.tsx  RegisterScreen.tsx  SettingsScreen.tsx
app/store/: auth.ts  journal.ts  store.ts
app/types/: index.ts
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 58de0b355013_initial_migration.py
backend/src/: auth.py  config.py  database.py  main.py  models.py  schemas.py
backend/src/routes/: auth.py  journal.py
backend/tests/: conftest.py  test_auth.py  test_journal.py
